--- a/circus/scss/fonts.scss
+++ b/circus/scss/fonts.scss
@@ -60,4 +60,15 @@
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: 'mrD_Aachen';
+    src: url('fonts/mrD_Aachen-Bold.woff2') format('woff2'),
+        url('fonts/mrD_Aachen-Bold.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 
