--- a/circus/style.css
+++ b/circus/style.css
@@ -88,6 +88,13 @@ table {
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "mrD_Aachen";
+  src: url("fonts/mrD_Aachen-Bold.woff2") format("woff2"), url("fonts/mrD_Aachen-Bold.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
 body, html {
   min-height: 100%;
 }
@@ -96,12 +103,27 @@ body {
   background: #ebe3be;
   position: relative;
   font-size: 14px;
-  line-height: 1;
+  line-height: 1 !important;
   font-family: "Overpass", sans-serif;
+  color: #000;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.page {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.wrapper {
+  padding: 230px 20px 0;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  flex: 1;
 }
 
 .bg__star {
@@ -138,17 +160,266 @@ body {
   left: 0;
   right: 0;
   margin: 0 auto;
-  background: url(img/ribbon.png) no-repeat center center;
+  background: url(img/ribbon.svg) no-repeat center center;
   background-size: contain;
   width: 600px;
   height: 250px;
   z-index: 1;
 }
 .ribbon__text {
-  font-family: "Rockwell";
+  font-family: "mrD_Aachen";
   font-size: 40px;
   text-transform: uppercase;
   text-align: center;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+.ribbon__frame {
+  background: url(img/frame.svg) no-repeat center center;
+  position: absolute;
+  top: 105px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 336px;
+  height: 68px;
+  background-size: contain;
+}
+.ribbon__frame__text {
+  font-family: "Rubik";
+  text-align: center;
+  font-size: 34px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #eeeebe;
+  line-height: 1;
+}
+.ribbon__frame__text small {
+  display: block;
+  font-size: 0.5em;
+  text-transform: uppercase;
+}
+
+.h1 {
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  color: #000;
+}
+
+.h2 {
+  font-size: 26px;
+  line-height: 1.2;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #000;
+}
+
+.h3 {
+  font-size: 24px;
+  line-height: 1.2;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #000;
+}
+
+.date__counter {
+  height: 39px;
+  background: url(img/counter-star-bg.svg) repeat-x left center;
+  background-size: contain;
+}
+.date__counter--active {
+  background: url(img/counter-star-active.svg) repeat-x left center;
+  background-size: contain;
+}
+.date__counter--wrapper {
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 330px;
+}
+
+.num {
+  border-radius: 20px;
+  background-color: #781b9e;
+  width: 280px;
+  margin: 10px auto 50px auto;
+  border: 4px solid #910003;
+  padding: 20px;
+}
+.num__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
+.num__row:not(:last-child) {
+  margin-bottom: 15px;
+}
+.num__item {
+  font-size: 50px;
+  color: #211f21;
+  font-family: "Rubik";
+}
+
+.glow1 {
+  -webkit-animation: glow1 1s ease-in-out infinite alternate;
+  -moz-animation: glow1 1s ease-in-out infinite alternate;
+  animation: glow1 1s ease-in-out infinite alternate;
+}
+
+.glow2 {
+  -webkit-animation: glow2 1s ease-in-out infinite alternate;
+  -moz-animation: glow2 1s ease-in-out infinite alternate;
+  animation: glow2 1s ease-in-out infinite alternate;
+}
+
+.glow3 {
+  -webkit-animation: glow3 1s ease-in-out infinite alternate;
+  -moz-animation: glow3 1s ease-in-out infinite alternate;
+  animation: glow3 1s ease-in-out infinite alternate;
+}
+
+.glow4 {
+  -webkit-animation: glow4 1s ease-in-out infinite alternate;
+  -moz-animation: glow4 1s ease-in-out infinite alternate;
+  animation: glow4 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow1 {
+  from {
+    text-shadow: none;
+  }
+  to {
+    color: #f1edf1;
+    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #e60073, 0 0 4px #e60073, 0 0 5px #e60073, 0 0 6px #e60073, 0 0 7px #e60073, 0 0 10px #fff, 0 0 20px #e60073, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 50px #e60073, 0 0 50px #e60073;
+  }
+}
+@-webkit-keyframes glow2 {
+  from {
+    text-shadow: none;
+  }
+  to {
+    color: #f1edf1;
+    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #3818f0, 0 0 4px #3818f0, 0 0 5px #3818f0, 0 0 6px #3818f0, 0 0 7px #3818f0, 0 0 10px #fff, 0 0 20px #3818f0, 0 0 30px #3818f0, 0 0 40px #3818f0, 0 0 50px #3818f0, 0 0 50px #3818f0, 0 0 50px #3818f0;
+  }
+}
+@-webkit-keyframes glow3 {
+  from {
+    text-shadow: none;
+  }
+  to {
+    color: #f1edf1;
+    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #e6e94f, 0 0 4px #e6e94f, 0 0 5px #e6e94f, 0 0 6px #e6e94f, 0 0 7px #e6e94f, 0 0 10px #fff, 0 0 20px #e6e94f, 0 0 30px #e6e94f, 0 0 40px #e6e94f, 0 0 50px #e6e94f, 0 0 50px #e6e94f, 0 0 50px #e6e94f;
+  }
+}
+@-webkit-keyframes glow4 {
+  from {
+    text-shadow: none;
+  }
+  to {
+    color: #f1edf1;
+    text-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #88e948, 0 0 4px #88e948, 0 0 5px #88e948, 0 0 6px #88e948, 0 0 7px #88e948, 0 0 10px #fff, 0 0 20px #88e948, 0 0 30px #88e948, 0 0 40px #88e948, 0 0 50px #88e948, 0 0 50px #88e948, 0 0 50px #88e948;
+  }
+}
+.footer {
+  padding: 0;
+  background-color: #ebe3be;
+  margin-top: 30px;
+}
+
+.tent {
+  position: relative;
+  z-index: 7;
+  width: 100%;
+}
+.tent img {
+  width: 100%;
+  display: block;
+}
+
+.block__title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.pot {
+  width: 331px;
+  height: 216px;
+  background: url(img/pot-frame.svg) no-repeat center center;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  line-height: 1.5;
+}
+.pot__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ticket {
+  background: url(img/ticket.svg) no-repeat center center;
+  width: 300px;
+  height: 133px;
+  margin: 0 auto;
+  background-size: contain;
+  position: relative;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+.ticket:hover {
+  opacity: 0.9;
+}
+.ticket:active .ticket__text {
+  transform: translateY(1px);
+}
+.ticket__text {
+  position: absolute;
+  top: 32px;
+  left: 47px;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+}
+.ticket__text span {
+  display: block;
+}
+.ticket__text span:first-child {
+  font-size: 24px;
+}
+.ticket__text span:nth-child(2) {
+  height: 1px;
+  width: 100%;
+  background-color: #fff;
+  opacity: 0.5;
+  margin: 2px 0;
+}
+.ticket__text span:last-child {
+  font-size: 36px;
+  font-weight: 500;
+}
+.ticket__rotated-text {
+  transform: rotate(-90deg);
+  display: inline-block;
+  position: absolute;
+  transform-origin: 50% 50%;
+  right: 14px;
+  top: 57px;
+  color: #9e1c18;
+  font-size: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
