--- a/circus/style.css
+++ b/circus/style.css
@@ -100,12 +100,13 @@ body, html {
 }
 
 body {
-  background: #ebe3be;
   position: relative;
   font-size: 14px;
   line-height: 1 !important;
   font-family: "Overpass", sans-serif;
   color: #000;
+  background: url(img/older-bg-3.svg) no-repeat center center, #ebe3be;
+  background-size: cover;
 }
 
 * {
@@ -131,6 +132,7 @@ body {
   top: 150px;
   bottom: 0;
   width: 20px;
+  z-index: 3;
 }
 .bg__star--left {
   left: 0;
@@ -147,7 +149,21 @@ body {
   right: 0;
   height: 200px;
   z-index: 1;
-  background-color: #ebe3be;
+  background: url(img/bg-top.svg) no-repeat center center, #fff;
+  background-size: cover;
+}
+.bg__top:before {
+  content: "";
+  display: block;
+  background: url(img/older-bg-1.svg) no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .bg__top img {
   width: 100%;
@@ -166,24 +182,42 @@ body {
   height: 250px;
   z-index: 1;
 }
-.ribbon__text {
+.ribbon__sub {
   font-family: "mrD_Aachen";
-  font-size: 40px;
+  font-size: 14px;
   text-transform: uppercase;
   text-align: center;
   font-weight: bold;
   letter-spacing: 2px;
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  top: -34px;
+}
+.ribbon__text {
+  font-family: "mrD_Aachen";
+  font-size: 36px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 2px;
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  top: 10px;
 }
 .ribbon__frame {
   background: url(img/frame.svg) no-repeat center center;
-  position: absolute;
-  top: 105px;
-  left: 0;
-  right: 0;
   margin: 0 auto;
   width: 336px;
   height: 68px;
   background-size: contain;
+}
+.ribbon__frame--header {
+  position: absolute;
+  top: 105px;
+  left: 0;
+  right: 0;
 }
 .ribbon__frame__text {
   font-family: "Rubik";
@@ -198,6 +232,10 @@ body {
   justify-content: center;
   color: #eeeebe;
   line-height: 1;
+}
+.ribbon__frame__text--smaller {
+  font-size: 22px;
+  line-height: 1.1;
 }
 .ribbon__frame__text small {
   display: block;
@@ -245,12 +283,15 @@ body {
   margin-right: auto;
   width: 330px;
 }
+.date__counter__wrapper {
+  text-align: center;
+}
 
 .num {
   border-radius: 20px;
   background-color: #781b9e;
   width: 280px;
-  margin: 10px auto 50px auto;
+  margin-right: 100px;
   border: 4px solid #910003;
   padding: 20px;
 }
@@ -332,14 +373,61 @@ body {
 }
 .footer {
   padding: 0;
-  background-color: #ebe3be;
+  background-color: transparent;
   margin-top: 30px;
+  position: relative;
+}
+.footer__links {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 100%;
+  padding: 0 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 8;
+  max-width: 1200px;
+}
+.footer__link {
+  display: block;
+  color: #000;
+  font-size: 18px;
+  font-weight: 600;
+}
+.footer__link:not(:last-child) {
+  margin-bottom: 30px;
+}
+.footer__link:hover {
+  text-decoration: underline;
+}
+.footer__link__col:first-child {
+  text-align: left;
+}
+.footer__link__col:last-child {
+  text-align: right;
 }
 
 .tent {
   position: relative;
   z-index: 7;
   width: 100%;
+}
+.tent:before {
+  content: "";
+  display: block;
+  background: url(img/older-bg-2.svg) no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: rotate(180deg);
 }
 .tent img {
   width: 100%;
@@ -350,6 +438,14 @@ body {
   text-align: center;
   margin-bottom: 30px;
 }
+.block__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  padding: 0 10px;
+}
 
 .pot {
   width: 331px;
@@ -359,22 +455,45 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   font-size: 30px;
   font-weight: 600;
   text-align: center;
   line-height: 1.5;
+  -webkit-animation: potGlow 1.4s ease-in-out infinite alternate;
+  -moz-animation: potGlow 1.4s ease-in-out infinite alternate;
+  animation: potGlow 1.4s ease-in-out infinite alternate;
 }
 .pot__wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.pot__text {
+  display: block;
+}
+.pot__text:first-child {
+  font-size: 1.3em;
+  font-weight: 600;
+}
+.pot__text:last-child {
+  font-size: 1em;
+  font-weight: 600;
+}
 
+@-webkit-keyframes potGlow {
+  from {
+    filter: brightness(1);
+  }
+  to {
+    filter: brightness(1.15);
+  }
+}
 .ticket {
   background: url(img/ticket.svg) no-repeat center center;
   width: 300px;
+  min-width: 300px;
   height: 133px;
-  margin: 0 auto;
   background-size: contain;
   position: relative;
   cursor: pointer;
@@ -420,6 +539,253 @@ body {
   top: 57px;
   color: #9e1c18;
   font-size: 18px;
+}
+
+.mob {
+  display: none;
+}
+
+.desc {
+  display: block;
+}
+
+@media all and (max-width: 1200px) {
+  .footer__links {
+    padding: 0 30px;
+  }
+}
+@media all and (max-width: 850px) {
+  .pot {
+    font-size: 24px;
+    height: 180px;
+  }
+
+  .block__title {
+    margin-bottom: 10px;
+  }
+  .block__wrapper {
+    margin-bottom: 30px;
+  }
+
+  .h3 {
+    margin-bottom: 0;
+  }
+
+  .num {
+    margin-right: 30px;
+  }
+
+  .date__counter__wrapper .h3 {
+    margin-bottom: 5px;
+  }
+}
+@media all and (max-width: 700px) {
+  .pot {
+    font-size: 18px;
+    height: 130px;
+  }
+
+  .num {
+    width: 200px;
+    padding: 10px;
+  }
+  .num__item {
+    font-size: 30px;
+  }
+
+  .block__wrapper {
+    margin-bottom: 20px;
+  }
+}
+@media all and (max-width: 600px) {
+  .wrapper {
+    padding-top: 190px;
+  }
+
+  .bg__star {
+    top: 125px;
+  }
+
+  .ribbon {
+    width: 480px;
+    height: 196px;
+  }
+  .ribbon__text {
+    top: 5px;
+  }
+  .ribbon__sub {
+    top: -29px;
+  }
+  .ribbon__frame {
+    width: 300px;
+    height: 60px;
+  }
+  .ribbon__frame--header {
+    top: 82px;
+  }
+  .ribbon__frame__text {
+    font-size: 28px;
+  }
+  .ribbon__frame__text--smaller {
+    font-size: 20px;
+  }
+
+  .bg__top {
+    height: 175px;
+  }
+
+  .num {
+    margin-right: 10px;
+  }
+
+  .footer__links {
+    padding: 0 20px;
+  }
+  .footer__link {
+    font-size: 14px;
+  }
+  .footer__link:not(:last-child) {
+    margin-bottom: 5px;
+  }
+}
+@media all and (max-width: 500px) {
+  .mob {
+    display: block;
+  }
+
+  .desc {
+    display: none;
+  }
+
+  .bg__star {
+    width: 15px;
+    background-size: 25px !important;
+    top: 78px;
+  }
+  .bg__top {
+    height: 130px;
+  }
+
+  .ribbon {
+    width: 285px;
+    height: 117px;
+    top: 19px;
+  }
+  .ribbon__text {
+    top: 3px;
+  }
+  .ribbon__sub {
+    top: -18px;
+  }
+  .ribbon__frame {
+    top: 48px;
+    width: 200px;
+    height: 44px;
+  }
+  .ribbon__frame__text {
+    font-size: 19px;
+  }
+  .ribbon__frame__text--smaller {
+    font-size: 14px;
+  }
+
+  .wrapper {
+    padding: 115px 20px 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .block__title {
+    margin-bottom: 0;
+  }
+  .block__wrapper {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .h1 {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+
+  .h3 {
+    font-size: 14px;
+    margin-bottom: 3px;
+  }
+
+  .pot {
+    width: 331px;
+    height: 70px;
+    font-size: 16px;
+    line-height: 1.1;
+  }
+  .pot__text:first-child {
+    font-size: 14px;
+  }
+  .pot__text:last-child {
+    font-size: 10px;
+  }
+
+  .num {
+    width: 140px;
+    margin: 5px auto 5px auto;
+    padding: 6px;
+  }
+  .num__row:not(:last-child) {
+    margin-bottom: 3px;
+  }
+  .num__item {
+    font-size: 22px;
+  }
+
+  .date__counter {
+    height: 24.5px;
+    background-size: auto 23.5px;
+    margin-bottom: 0;
+  }
+  .date__counter--active {
+    background-size: auto 23.5px;
+  }
+  .date__counter--wrapper {
+    margin-bottom: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+  }
+
+  .ticket {
+    width: 130px;
+    min-width: 130px;
+    height: 66px;
+    top: 0;
+    margin: 0 auto;
+  }
+  .ticket__text {
+    top: 15px;
+    left: 16px;
+  }
+  .ticket__text span:first-child {
+    font-size: 14px;
+  }
+  .ticket__text span:last-child {
+    font-size: 18px;
+  }
+  .ticket__rotated-text {
+    right: 7px;
+    top: 28px;
+    font-size: 8px;
+  }
+
+  .footer {
+    margin-top: 5px;
+    overflow: hidden;
+  }
+
+  .tent {
+    top: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
