--- a/circus/variant1/scss/main.scss
+++ b/circus/variant1/scss/main.scss
@@ -81,6 +81,35 @@ body{
         }
     }
 }
+.star{
+    position: absolute;
+    top: 180px;
+    z-index: 7;
+
+    &--left{
+        left: 40px;
+        transform: rotateY(180deg);
+    }
+    &--right{
+        right: 40px;
+    }
+    
+    img{
+        max-width: 100%;
+    }
+
+    &--small{
+        top: 110px;
+        width: 70px;
+
+        &.star--left{
+            left: 10px;
+        }
+        &.star--right{
+            right: 10px;
+        }
+    }
+}
 .ribbon{
     position: absolute;
     top: 30px;
@@ -620,6 +649,23 @@ $glow4: #88e948;
     }
 }
 @media all and (max-width: 850px){
+    .star{
+        width: 60px;
+        top: 150px;
+
+        &--left{
+            left: 25px;
+        }
+        &--right{
+            right: 25px;
+        }
+
+
+        &--small{
+            top: 110px;
+            width: 40px;
+        }
+    }
     .pot{
         font-size: 24px;
         height: 180px;
@@ -670,6 +716,13 @@ $glow4: #88e948;
 }
 
 @media all and (max-width: 600px){
+    .star{
+        top: 130px;
+
+        &--small{
+            top: 90px;
+        }
+    }
     .wrapper{
         padding-top: 190px;
     }
@@ -728,6 +781,30 @@ $glow4: #88e948;
 }
 
 @media all and (max-width: 500px){
+    .star{
+        width: 30px;
+        top: 85px;
+
+        &--left{
+            left: 15px;
+        }
+        &--right{
+            right: 15px;
+        }
+
+
+        &--small{
+            top: 70px;
+            width: 20px;
+
+            &.star--left{
+                left: 10px;
+            }
+            &.star--right{
+                right: 10px;
+            }
+        }
+    }
     .mob{
         display: block;
     }
