--- a/circus/variant1/scss/main.scss
+++ b/circus/variant1/scss/main.scss
@@ -255,6 +255,7 @@ body{
     margin-right: 100px;
     border: 4px solid #910003;
     padding: 20px;
+    overflow: hidden;
 
     &__row{
         display: -webkit-box;
