--- a/circus/variant1/style.css
+++ b/circus/variant1/style.css
@@ -339,6 +339,7 @@ body {
   margin-right: 100px;
   border: 4px solid #910003;
   padding: 20px;
+  overflow: hidden;
 }
 .num__row {
   display: -webkit-box;
