--- a/circus/variant1/style.css
+++ b/circus/variant1/style.css
@@ -567,6 +567,9 @@ body {
   font-weight: 600;
   text-align: center;
   line-height: 1.5;
+  -webkit-animation: potGlow 1.4s ease-in-out infinite alternate;
+  animation: potGlow 1.4s ease-in-out infinite alternate;
+  overflow: hidden;
 }
 .pot__wrapper {
   display: -webkit-box;
