--- a/bayside/scss/main.scss
+++ b/bayside/scss/main.scss
@@ -1,4 +1,5 @@
 *{
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 body{
@@ -22,8 +23,14 @@ img{
         bottom: 100px;
         left: 0;
         right: 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
     }
 }
@@ -36,8 +43,14 @@ img{
         padding-top: 123px;
     }
     &--menu{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
         justify-content: flex-start;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         position: absolute;
         top: 24px;
@@ -49,8 +62,14 @@ img{
             height: 49px;
             background-color: $burger-bg;
             border-radius: 100%;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
             justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
             align-items: center;
             cursor: pointer;
         }
@@ -75,13 +94,16 @@ img{
         left: 0;
         right: 0;
         bottom: 0;
+        background-image: -o-linear-gradient(237.41deg, rgba(14, 14, 14, 0), rgba(0, 0, 0, 0.53) 7.71%, rgba(15, 15, 15, 0.9) 60%),
+        url('img/header-bg.jpg');
         background-image: linear-gradient(212.59deg, rgba(14, 14, 14, 0), rgba(0, 0, 0, 0.53) 7.71%, rgba(15, 15, 15, 0.9) 60%),
-                            url('img/header-bg.jpg');
+        url('img/header-bg.jpg');
         background-size: cover;
 
         img{
             height: 100%;
             width: 100%;
+            -o-object-fit: cover;
             object-fit: cover;
         }
     }
@@ -107,8 +129,14 @@ img{
     }
 
     &--info{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
         justify-content: flex-start;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
         align-items: flex-start;
 
         &--row{
@@ -155,34 +183,61 @@ img{
         height: 100%;
         display: block;
         text-align: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
     }
 
     .main--cont{
         position: relative;
         padding: 6px 16px;
+        -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        -o-transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
         transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
     }
     .helper--cont{
+        -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        -o-transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
         transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        -webkit-transform: translate3d(0, 100%, 0);
         transform: translate3d(0, 100%, 0);
     }
     .btn--shim{
         background: $btn-color2;
+        -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        -o-transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
         transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+        -webkit-transition-delay: 0.1s;
+        -o-transition-delay: 0.1s;
         transition-delay: 0.1s;
     }
 
     &:hover{
         .main--cont{
+            -webkit-transform: translateY(-100%);
+            -ms-transform: translateY(-100%);
             transform: translateY(-100%);
         }
         .btn--shim{
+            -webkit-transform: translateY(-100%);
+            -ms-transform: translateY(-100%);
             transform: translateY(-100%);
         }
         .helper--cont{
+            -webkit-transform: translateY(-100%);
+            -ms-transform: translateY(-100%);
             transform: translateY(-100%);
         }
     }
@@ -218,8 +273,14 @@ img{
         padding-bottom: 124px;
 
         .container{
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
+            -webkit-box-pack: start;
+            -ms-flex-pack: start;
             justify-content: flex-start;
+            -webkit-box-align: start;
+            -ms-flex-align: start;
             align-items: flex-start;
 
             .right{
